test/fail/no-timer-set.mo
//MOC-FLAG -no-timer

import { setTimer } = "mo:⛔";
